[tool.poetry]
name = "run-club-msc-backend"
version = "0.1.0"
description = ""
authors = ["Valerian <@VelValerian>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.2"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
